<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/text_login"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="150dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        app:layout_constraintEnd_toEndOf="@+id/tv_login"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        app:layout_constraintEnd_toEndOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.Material3.Button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:backgroundTint="@color/button_color"
        android:padding="@dimen/margin_8"
        android:text="@string/text_login"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_password" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        app:buttonSize="wide"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/tv_no_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_login_google"
        app:layout_constraintStart_toStartOf="@+id/btn_login_google"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_google" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_no_acc"
        app:layout_constraintStart_toStartOf="@+id/tv_no_acc"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_acc" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />
</androidx.constraintlayout.widget.ConstraintLayout>