<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResultActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/popup_window_view_with_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="3dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/popup_window_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="2dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="3dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:cardPreventCornerOverlap="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/popup_window_background_container"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:minHeight="170dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/popup_window_title"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="?attr/colorPrimary"
                    android:gravity="center"
                    android:text="@string/result"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:autoSizeMaxTextSize="24dp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_photo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/margin_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popup_window_title"
                    app:srcCompat="@drawable/dummy_menu" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_photo"
                    tools:text="Text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_8"
                    android:gravity="center"
                    android:text="@string/title_description"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_description"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/title_desc"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    tools:text="Description Description Description Description Description Description Description Description Description Description DescriptionDescription" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_description" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_treatment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:text="@string/title_treatment"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/btn_close"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_treatment"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/btn_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/title_treatment"
                    app:layout_constraintTop_toBottomOf="@+id/view1"
                    tools:text="Treatment Treatment Treatment Treatment Treatment Treatment Treatment Treatment Treatment Treatment Treatment" />

                <Button
                    android:id="@+id/btn_close"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorAccent"
                    android:text="@string/btn_close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ProgressBar
                    android:id="@+id/pb_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/popup_window_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>